# unifin

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: evolve.yml
docs/: ARCHITECTURE.md
scripts/: verify_pipeline.py
src/unifin/: __init__.py
src/unifin/api/: __init__.py  app.py  cli.py
src/unifin/core/: __init__.py  errors.py  fetcher.py  registry.py  router.py  store.py  symbol.py  types.py
src/unifin/evolve/: __init__.py  cli.py  discoverer.py  generator.py  github.py  loader.py  orchestrator.py  schema.py  templates.py
src/unifin/models/: __init__.py  balance_sheet.py  cash_flow.py  equity_historical.py  equity_profile.py  equity_quote.py  equity_search.py  etf_search.py  fund_nav.py  income_statement.py  index_historical.py  trade_calendar.py
src/unifin/nl/: __init__.py  engine.py  llm.py  tools.py
src/unifin/providers/: __init__.py
src/unifin/providers/akshare/: __init__.py  equity_historical.py  equity_quote.py  equity_search.py  etf_search.py  fund_nav.py  trade_calendar.py
src/unifin/providers/eastmoney/: __init__.py  equity_historical.py
src/unifin/providers/yfinance/: __init__.py  balance_sheet.py  cash_flow.py  equity_historical.py  equity_profile.py  equity_quote.py  equity_search.py  etf_search.py  income_statement.py  index_historical.py  trade_calendar.py
src/unifin/sdk/: __init__.py  equity.py  etf.py  index.py  market.py
tests/: test_api_nl.py  test_equity_historical.py  test_error_messages.py  test_evolve.py  test_evolve_fund_nav.py  test_llm_client.py  test_m2_models.py  test_new_fetchers.py
